tests/fixtures/pass/strings/fstring_empty_literal.walrus
println("start");
println(f"");
println("end");
