tests/fixtures/fail/fstring_invalid_unicode_escape.walrus
println(f"\u0041");
